cluster/kubernetes/network/gateways/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: 10.10.30.71
  labels:
    gateway-label: internal-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.30.71
  listeners:
    # catch all local http -> https
    - name: http-redirect
      hostname: "*.local.cjsolsen.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # catch traffic for the pihole0 dashboard
    - name: pihole0-dashboard
      hostname: pihole.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole0-cjsolsen-com
    # catch traffic for the pihole1 dashboard
    - name: pihole1-dashboard
      hostname: pihole1.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole1-cjsolsen-com
    # catch traffic for the pihole2 dashboard
    - name: pihole2-dashboard
      hostname: pihole2.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole2-cjsolsen-com
    # catch traffic for the ceph dashboard
    - name: ceph-dashboard
      hostname: ceph.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ceph-cjsolsen-com
    # catch traffic for the hubble dashboard
    - name: hubble-dashboard
      hostname: hubble.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-cjsolsen-com
    # catch traffic for the homepage dashboard
    - name: homepage
      hostname: homepage.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: homepage-cjsolsen-com
    # catch traffic for the gatus dashboard
    - name: gatus
      hostname: gatus.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gatus-cjsolsen-com
    # catch traffic for the grafana dashboard
    - name: grafana
      hostname: grafana.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-cjsolsen-com
    # catch traffic for the prometheus dashboard
    - name: prometheus
      hostname: prometheus.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-cjsolsen-com
    # catch traffic for the alertmanager dashboard
    - name: alertmanager
      hostname: alertmanager.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-cjsolsen-com
